Provide the ability to Mock WorkflowActivityContext (#1358)
* Make context mockable

Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Fix project

Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Consolidated version of coverlet.msbuild, coverlet.collector, xunit, xunit.runner.visualstudio, Microsoft.AspNetCore.Mvc.Testing, Moq to the same version in all projects.

Signed-off-by: Manuel Menegazzo <manuel.menegazzo@outlook.com>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Make context mockable

Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Fix project

Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Added unit test to prove out concern raised on Discord

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Removed unused using

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Added unit test to validate that headers aren't being stripped off request

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Fixed spelling typo

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Added fix to handle null return values

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Removed unnecessary null check

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Removed deprecated methods from DaprClient and tests as well as unused types

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Varma Vegiraju <svegiraju@microsoft.com>

* Removed unused (and invalid) reference

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>
Signed-off-by: Siri Var

--- a/test/Dapr.Workflow.Test/Dapr.Workflow.Test.csproj
+++ b/test/Dapr.Workflow.Test/Dapr.Workflow.Test.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -14,8 +13,8 @@
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.extensibility.core" />
         <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="Moq" />
     </ItemGroup>
-
     <ItemGroup>
         <Using Include="Xunit"/>
     </ItemGroup>
@@ -23,5 +22,4 @@
     <ItemGroup>
       <ProjectReference Include="..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
     </ItemGroup>
-
 </Project>
