Add Dapr.Workflow.Analyzers with unit tests
Introduced a new diagnostic analyzer `WorkflowActivityAnalyzer` to check if workflow activities are registered in the DI container. Updated the solution to include new projects for analyzers and their tests. Added unit tests to verify analyzer functionality and updated documentation to reflect the new release and rules. Included necessary package references and streamlined testing setup.

Signed-off-by: Nils Gruson <ngruson@hotmail.com>

--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
     <ProjectReference Include="..\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
     <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
+    <ProjectReference Include="..\Dapr.Workflow.Analyzers\Dapr.Workflow.Analyzers.csproj" />
   </ItemGroup>
 
 </Project>
