Update project file to exclude build output dependency
Added `<IncludeBuildOutput>false</IncludeBuildOutput>` to
`Dapr.Workflow.Analyzers.csproj` to prevent the build output
from being included as a library dependency. This change
includes a comment for clarity and aligns with existing
NuGet package properties.

Signed-off-by: Nils Gruson <ngruson@hotmail.com>

--- a/src/Dapr.Workflow.Analyzers/Dapr.Workflow.Analyzers.csproj
+++ b/src/Dapr.Workflow.Analyzers/Dapr.Workflow.Analyzers.csproj
@@ -19,6 +19,9 @@
     <!-- Suppress generation of symbol package (.snupkg). -->
     <IncludeSymbols>false</IncludeSymbols>
 
+    <!-- Do not include the generator as a lib dependency -->
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+
     <!-- Additional NuGet package properties. -->
     <Description>This package contains analyzers for interacting with Dapr workflows.</Description>
     <PackageTags>$(PackageTags)</PackageTags>
