Tweak to use 'stdout' instead of 'std' leaving open the possibility to validate 'stderr' messages at some future point
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -150,7 +150,7 @@ jobs:
             for test in $tests; do
               test_name=$(echo $test | jq -r '.name')
               args=$(echo $test | jq -r '.arguments')
-              expectedOutputs=$(echo $test | jq -r '.expected_std_output[]')
+              expectedOutputs=$(echo $test | jq -r '.expected_stdout_output[]')
               expectation_type=$(echo $test | jq -r '.expectation_type')
                         
               echo "Building and testing $project with .NET ${{matrix.dotnet-version}}"
