--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -129,7 +129,7 @@ jobs:
           # Find all .csproj files in the ./examples directory
           all_projects=$(find ./examples -name '*.csproj' -exec basename {} \; | sed 's/.csproj//')
           # Get the list of projects from example-e2e-tests.json
-          tested_projects=$(jq -r '.projects[].project' example-e2e-tests.json | sed 's/.csproj//')
+          tested_projects=$(jq -r '.projects[].project' ./.github/workflows/example-e2e-tests.json | sed 's/.csproj//')
           # Compare the lists and find projects without tests
           for project in $all_projects; do
             if ! echo "$tested_projects" | grep -q "$project"; then
@@ -140,7 +140,7 @@ jobs:
       - name: Build & test projects
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
         run: |
-          projects=$(jq -c '.projects[]' example-e2e-tests.json)
+          projects=$(jq -c '.projects[]' ./.github/workflows/example-e2e-tests.json)
           for project in $projects; do
             project_name=$(echo $project | jq -r '.project')
           
