--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -140,12 +140,21 @@ jobs:
       - name: Build & test projects
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
         run: |
+          # Debug: Print the contents of the JSON file
+          echo "Contents of example-e2e-tests.json"
+          cat ./.github/workflows/example-e2e-tests.json
+          
+          # Debug: Validate the JSON file
+          echo "Validating JSON file with jq:"
+          jq . ./.github/workflows/example-e2e-tests.json
+          
+          # Parse the projects
           projects=$(jq -c '.projects[]' ./.github/workflows/example-e2e-tests.json)
           for project in $projects; do
             project_name=$(echo $project | jq -r '.project')
           
             # Find the .csproj file in the ./examples directory
-            csproj_path=$(find ./examples -name "$project_name")
+            csproj_path=$(find ./examples -name '$project_name')
             
             tests=$(echo $project | jq -c '.tests[]')
             for test in $tests; do
