--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        dotnet-version: ['8.0', '9.0']
+        dotnet-version: ['8.0'] #, '9.0']
         include:
         - dotnet-version: '8.0'
           display-name: '.NET 8.0'
@@ -139,17 +139,16 @@ jobs:
         
       - name: Build & test projects
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
-        run: |
-          # Debug: Print the contents of the JSON file
-          echo "Contents of example-e2e-tests.json"
-          cat ./.github/workflows/example-e2e-tests.json
-          
+        run: |          
           # Debug: Validate the JSON file
           echo "Validating JSON file with jq:"
           jq . ./.github/workflows/example-e2e-tests.json
           
           # Parse the projects
           projects=$(jq -c '.projects[]' ./.github/workflows/example-e2e-tests.json)
+          echo "Parsed projects:"
+          echo "$projects".
+          
           for project in $projects; do
             project_name=$(echo $project | jq -r '.project')
           
