--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: ['ubuntu-latest']
         dotnet-version: ['8.0'] #, '9.0']
         include:
         - dotnet-version: '8.0'
