Using strictly ubuntu-latest for now
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -34,7 +34,7 @@ jobs:
           prefix: 'net9'
           install-version: '9.0.x'
           
-    runs-on: ${{ matrix.os }}
+    runs-on: 'ubuntu-latest'
           
     env:
       NUPKG_OUTDIR: bin/Release/nugets
