--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -106,18 +106,6 @@ jobs:
         with:
           dotnet-version: ${{ matrix.install-version }}
           dotnet-quality: 'ga'  # Prefer a GA release, but use the RC if not available
-      - name: Setup .NET 8 (required)
-        uses: actions/setup-dotnet@v3
-        if: ${{ matrix.install-version != '8.0.x' }}
-        with:
-          dotnet-version: '8.0.x'
-          dotnet-quality: 'ga'
-      - name: Setup .NET 9 (required)
-        uses: actions/setup-dotnet@v3
-        if: ${{ matrix.install-version != '9.0.x' }}
-        with:
-          dotnet-version: '9.0.x'
-          dotnet-quality: 'ga'
       - name: Install dependencies
         run: dotnet restore
       - name: Check test coverage
@@ -155,8 +143,8 @@ jobs:
             echo "$tests" | while read test; do
               test_name=$(echo $test | jq -r '.name')
               echo "test name: $test_name"
-              args=$(echo $test | jq -r '.arguments')
-              echo 'args: $args'
+              arguments=$(echo $test | jq -r '.arguments')
+              echo 'args: $arguments'
               expectedOutputs=$(echo $test | jq -r '.expected_stdout_output[]')
               expectation_type=$(echo $test | jq -r '.expectation_type')
                         
