Added specific .NET framework to dotnet build operation as well
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -145,7 +145,7 @@ jobs:
               expectation_type=$(echo $test | jq -r '.expectation_type')
                         
               echo "Building and testing $project_name with .NET ${{ matrix.dotnet-version }}"
-              dotnet build $csproj_path --configuration Release /p:GITHUB_ACTIONS=false
+              dotnet build $csproj_path --framework ${{ matrix.framework }} --configuration Release /p:GITHUB_ACTIONS=false
               output=$(dotnet run --project $csproj_path --framework ${{ matrix.framework }} -- $arguments)
           
               for expected in $expectedOutputs; do
