Updating crypto example to use smallfile and improve reference
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Client/Cryptography/Cryptography.csproj
+++ b/examples/Client/Cryptography/Cryptography.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="file.txt">
+      <None Update="smallfile.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
