Switched to double quotes
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -140,10 +140,10 @@ jobs:
               test_name=$(echo $test | jq -r '.name')
               echo "test name: $test_name"
               test_arguments=$(echo $test | jq -r '.arguments')
-              echo 'args: $test_arguments'
+              echo "args: $test_arguments"
               expectedOutputs=$(echo $test | jq -r '.expected_stdout_output[]')
               expectation_type=$(echo $test | jq -r '.expectation_type')
-              echo 'expectation_type: $expectation_type'
+              echo "expectation_type: $expectation_type"
                         
               echo "Building and testing $project_name with .NET ${{ matrix.dotnet-version }}"
               dotnet build $csproj_path --framework ${{ matrix.framework }} --configuration Release /p:GITHUB_ACTIONS=false
