Renamed project from Dapr.Messaging to Dapr.PubSub
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Client/PublishSubscribe/StreamingSubscriptionExample/StreamingSubscriptionExample.csproj
+++ b/examples/Client/PublishSubscribe/StreamingSubscriptionExample/StreamingSubscriptionExample.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\src\Dapr.Messaging\Dapr.Messaging.csproj" />
+      <ProjectReference Include="..\..\..\..\src\Dapr.PubSub\Dapr.PubSub.csproj" />
     </ItemGroup>
 
 </Project>
