--- a/test/Dapr.PubSub.Test/Dapr.PubSub.Test.csproj
+++ b/test/Dapr.PubSub.Test/Dapr.PubSub.Test.csproj
@@ -37,7 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Dapr.Messaging\Dapr.Messaging.csproj" />
+      <ProjectReference Include="..\..\src\Dapr.PubSub\Dapr.PubSub.csproj" />
     </ItemGroup>
 
 </Project>
