Removed unused reference to FluentAssertions in light of licensing change (#1449)
* Removed unused reference to FluidAssertions in light of licensing change

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Removed from Dapr.AI.Test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.Extensions.Configuration.Test to use Shouldly

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.Common.Test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.Actors.AspNetCore.Test from FluentAssertions

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Added missing copyright header

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.Actors.Test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.Client.Test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Removed unused using reference

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.E2E.Test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.AspNetCore.Test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Migrated Dapr.AspNetCore.IntegrationTest

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Removed reference to FluentAssertions

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed several unit tests

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed another unit test

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed more tests

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed additional unit tests

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Updating more unit tests

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed more unit tests

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed more unit tests

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed more unit tests

Signed-off-by: Whit Waldo <whit.waldo@

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,7 +7,6 @@
     <PackageVersion Include="BenchmarkDotNet" Version="0.14.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="coverlet.msbuild" Version="6.0.2" />
-    <PackageVersion Include="FluentAssertions" Version="5.9.0" />
     <PackageVersion Include="GitHubActionsTestLogger" Version="1.1.2" />
     <PackageVersion Include="Google.Api.CommonProtos" Version="2.2.0" />
     <PackageVersion Include="Google.Protobuf" Version="3.28.2" />
@@ -43,6 +42,7 @@
     <PackageVersion Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageVersion Include="Shouldly" Version="4.2.1" />
     <PackageVersion Include="System.Formats.Asn1" Version="6.0.1" />
     <PackageVersion Include="System.Text.Json" Version="6.0.10" />
     <PackageVersion Include="xunit" Version="2.9.2" />
