--- a/test/Dapr.Jobs.Analyzer.Test/Dapr.Jobs.Analyzer.Test.csproj
+++ b/test/Dapr.Jobs.Analyzer.Test/Dapr.Jobs.Analyzer.Test.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\Dapr.Jobs\Dapr.Jobs.csproj" />
         <ProjectReference Include="..\..\src\Dapr.Jobs.Analyzer\Dapr.Jobs.Analyzer.csproj" />
     </ItemGroup>
 
