--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -114,9 +114,11 @@ jobs:
         with:
           dotnet-version: '9.0.x'
           dotnet-quality: 'ga'
+      - name: Restore dependencies
+        run: dotnet restore
       - name: Build
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
-        run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
+        run: dotnet build --configuration release --no-restore /p:GITHUB_ACTIONS=false
       - name: Run General Tests
         id: tests
         continue-on-error: true # proceed if tests fail, the report step will report the failure with more details.
