--- a/src/Dapr.Cryptography/Dapr.Cryptography.csproj
+++ b/src/Dapr.Cryptography/Dapr.Cryptography.csproj
@@ -19,6 +19,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="System.IO.Pipelines" />
     </ItemGroup>
 
 </Project>
