Refactored actor example to modernize
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Actor/ActorClient/ActorClient.csproj
+++ b/examples/Actor/ActorClient/ActorClient.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Dapr.Actors\Dapr.Actors.csproj" />
-    <ProjectReference Include="..\IDemoActor\IDemoActor.csproj" />
+    <ProjectReference Include="..\DemoActor.Interfaces\DemoActor.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
