--- a/examples/Actor/DemoActor/DemoActor.csproj
+++ b/examples/Actor/DemoActor/DemoActor.csproj
@@ -4,6 +4,7 @@
         <IsPublishable>true</IsPublishable>
         <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
         <ContainerRepository>demo-actor</ContainerRepository>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,7 +15,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\src\Dapr.Actors.AspNetCore\Dapr.Actors.AspNetCore.csproj" />
         <ProjectReference Include="..\..\..\src\Dapr.Actors\Dapr.Actors.csproj" />
-        <ProjectReference Include="..\IDemoActor\IDemoActor.csproj" />
+        <ProjectReference Include="..\DemoActor.Interfaces\DemoActor.Interfaces.csproj" />
     </ItemGroup>
 
 </Project>
