--- a/examples/Actor/DemoActor.Interfaces/DemoActor.Interfaces.csproj
+++ b/examples/Actor/DemoActor.Interfaces/DemoActor.Interfaces.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <RootNamespace>IDemoActor</RootNamespace>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Dapr.Actors\Dapr.Actors.csproj" />
   </ItemGroup>
