--- a/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers.Tests/Dapr.Actors.Analyzers.Tests.csproj
+++ b/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers.Tests/Dapr.Actors.Analyzers.Tests.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
