--- a/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers.csproj
+++ b/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers.csproj
@@ -4,14 +4,11 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <TargetFrameworks></TargetFrameworks>
         <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
+        <Description>This package contains Roslyn analyzers for Dapr.Actors.</Description>
 
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-        <IsRoslynComponent>true</IsRoslynComponent>
-
-        <RootNamespace>Dapr.Actors.Analyzers</RootNamespace>
-        <AssemblyName>Dapr.Actors.Analyzers</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
