--- a/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers.Tests/Dapr.Actors.Analyzers.Tests.csproj
+++ b/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers.Tests/Dapr.Actors.Analyzers.Tests.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all" />
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="GitHubActionsTestLogger"/>
         <PackageReference Include="xunit.extensibility.core"/>
         <PackageReference Include="xunit"/>
         <PackageReference Include="coverlet.collector">
