Fixed project relative references
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.Actors.Analyzers.Tests/Dapr.Actors.Analyzers.Tests.csproj
+++ b/test/Dapr.Actors.Analyzers.Tests/Dapr.Actors.Analyzers.Tests.csproj
@@ -28,8 +28,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Dapr.Actors\Dapr.Actors.csproj" />
-        <ProjectReference Include="..\Dapr.Actors.Analyzers\Dapr.Actors.Analyzers.csproj"/>
+        <ProjectReference Include="..\..\src\Dapr.Actors.Analyzers\Dapr.Actors.Analyzers\Dapr.Actors.Analyzers.csproj" />
+        <ProjectReference Include="..\..\src\Dapr.Actors\Dapr.Actors.csproj" />
     </ItemGroup>
 
 </Project>
