Updated to use existing Dapr.Actors.Analyzers project. Refactored to split out analyzers to separate classes and updated tests accordingly. Update to rule ID numbering and verbiage.
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -25,6 +25,7 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing" Version="1.1.2" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.2" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.13.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.13.0" />
     <PackageVersion Include="Microsoft.DurableTask.Client.Grpc" Version="1.5.0" />
     <PackageVersion Include="Microsoft.DurableTask.Worker.Grpc" Version="1.5.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
