--- a/test/Dapr.Actors.Analyzers.Test/Dapr.Actors.Analyzers.Test.csproj
+++ b/test/Dapr.Actors.Analyzers.Test/Dapr.Actors.Analyzers.Test.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>Dapr.Actors.Analyzers.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
