Fixed failing unit tests from Dapr.Jobs.Analyzer after shift to common project
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.Jobs.Analyzer.Test/Dapr.Jobs.Analyzers.Test.csproj
+++ b/test/Dapr.Jobs.Analyzer.Test/Dapr.Jobs.Analyzers.Test.csproj
@@ -26,6 +26,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\src\Dapr.Jobs\Dapr.Jobs.csproj" />
         <ProjectReference Include="..\..\src\Dapr.Jobs.Analyzer\Dapr.Jobs.Analyzers.csproj" />
+        <ProjectReference Include="..\Dapr.Analyzers.Common\Dapr.Analyzers.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
