Added Shouldly to project
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.Messaging.Test/Dapr.Messaging.Test.csproj
+++ b/test/Dapr.Messaging.Test/Dapr.Messaging.Test.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="Google.Protobuf" />
         <PackageReference Include="Grpc.Core.Testing" />
         <PackageReference Include="Grpc.Net.Client" />
+        <PackageReference Include="Shouldly"/>
         <PackageReference Include="protobuf-net.Grpc.AspNetCore" />
         <PackageReference Include="Grpc.Tools" PrivateAssets="All" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
