--- a/examples/Messaging/StreamingSubscriptionExample/StreamingSubscriptionExample.csproj
+++ b/examples/Messaging/StreamingSubscriptionExample/StreamingSubscriptionExample.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\src\Dapr.Messaging\Dapr.Messaging.csproj" />
+      <ProjectReference Include="..\..\..\src\Dapr.Messaging\Dapr.Messaging.csproj" />
     </ItemGroup>
 
 </Project>
