Add Dapr’s gRPC proxying capability example
Signed-off-by: ercJuL <1552930110@qq.com>

--- a/examples/AspNetCore/GrpcServiceSample/GrpcServiceSample.csproj
+++ b/examples/AspNetCore/GrpcServiceSample/GrpcServiceSample.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\*.proto" ProtoRoot="Protos" GrpcServices="None" />
+    <Protobuf Include="Protos\*.proto" ProtoRoot="Protos" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
