Modernized crypto example
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Client/Cryptography/Cryptography.csproj
+++ b/examples/Client/Cryptography/Cryptography.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\src\Dapr.Common\Dapr.Common.csproj" />
       <ProjectReference Include="..\..\..\src\Dapr.Crypto\Dapr.Crypto.csproj" />
     </ItemGroup>
 
