Refactoring to rename from Dapr.Crypto to Dapr.Cryptography
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Client/Cryptography/Cryptography.csproj
+++ b/examples/Client/Cryptography/Cryptography.csproj
@@ -15,7 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\Dapr.Common\Dapr.Common.csproj" />
-      <ProjectReference Include="..\..\..\src\Dapr.Crypto\Dapr.Crypto.csproj" />
+      <ProjectReference Include="..\..\..\src\Dapr.Cryptography\Dapr.Cryptography.csproj" />
     </ItemGroup>
 
 </Project>
