Fixed package references
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Cryptography/Cryptography.csproj
+++ b/examples/Cryptography/Cryptography.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\src\Dapr.Common\Dapr.Common.csproj" />
-      <ProjectReference Include="..\..\..\src\Dapr.Cryptography\Dapr.Cryptography.csproj" />
+      <ProjectReference Include="..\..\src\Dapr.Common\Dapr.Common.csproj" />
+      <ProjectReference Include="..\..\src\Dapr.Cryptography\Dapr.Cryptography.csproj" />
     </ItemGroup>
 
 </Project>
