--- a/test/Dapr.Cryptography.Test/Dapr.Cryptography.Test.csproj
+++ b/test/Dapr.Cryptography.Test/Dapr.Cryptography.Test.csproj
@@ -1,4 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+      <Nullable>enable</Nullable>
+    </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="coverlet.msbuild">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -8,6 +11,7 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
         <PackageReference Include="moq" />
         <PackageReference Include="xunit"/>
+        <PackageReference Include="xunit.extensibility.core" />
         <PackageReference Include="xunit.runner.visualstudio">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
