Added keys path to app output
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.E2E.Test/Dapr.E2E.Test.csproj
+++ b/test/Dapr.E2E.Test/Dapr.E2E.Test.csproj
@@ -25,4 +25,10 @@
   <ItemGroup>
     <Protobuf Include="../Dapr.E2E.Test.App.Grpc/Proto/message.proto" GrpcServices="Client" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="keys\rsa-private-key.pem" />
+    <Content Include="keys\rsa-private-key.pem">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
