--- a/test/Dapr.E2E.Test/Dapr.E2E.Test.csproj
+++ b/test/Dapr.E2E.Test/Dapr.E2E.Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Dapr.Actors\Dapr.Actors.csproj" />
+    <ProjectReference Include="..\..\src\Dapr.Cryptography\Dapr.Cryptography.csproj" />
     <ProjectReference Include="..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
     <ProjectReference Include="..\..\src\Dapr.Extensions.Configuration\Dapr.Extensions.Configuration.csproj" />
     <ProjectReference Include="..\Dapr.E2E.Test.Actors\Dapr.E2E.Test.Actors.csproj" />
@@ -23,5 +24,11 @@
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="../Dapr.E2E.Test.App.Grpc/Proto/message.proto" GrpcServices="Client" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="keys\rsa-private-key.pem" />
+    <Content Include="keys\rsa-private-key.pem">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
