--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.DurableTask.Client.Grpc" />
-    <PackageReference Include="Microsoft.DurableTask.Worker.Grpc" />
+    <PackageReference Include="Dapr.DurableTask.Client.Grpc" />
+    <PackageReference Include="Dapr.DurableTask.Worker.Grpc" />
   </ItemGroup>
 
   <ItemGroup>
