--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - release-*
+      - durabletask-fork
     tags:
       - v*
     
@@ -12,6 +13,7 @@ on:
     branches: 
     - master
     - release-*
+    - durabletask-fork
 
 jobs:
   build:
