--- a/examples/Directory.Build.props
+++ b/examples/Directory.Build.props
@@ -1,10 +1,11 @@
 <Project>
-  <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed_netcore.props" />
+    <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed_netcore.props" />
 
-  <PropertyGroup>
-    <!-- Set Output Path for samples-->
-    <OutputPath>$(RepoRoot)bin\$(Configuration)\examples\$(MSBuildProjectName)\</OutputPath>
+    <PropertyGroup>
+        <TargetFrameworks>net6;net7;net8;net9</TargetFrameworks>
+        <!-- Set Output Path for samples-->
+        <OutputPath>$(RepoRoot)bin\$(Configuration)\examples\$(MSBuildProjectName)\</OutputPath>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 </Project>
